# vuln-research-mcp

./: .gitignore  .pre-commit-config.yaml  .pypirc  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  PACKAGING_SETUP_REPORT.md  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  claude_desktop_config_example.json  config.example.yaml  docker-compose.yml  entrypoint.sh  install.ps1  pyproject.toml  requirements.txt  setup.py  test_v02.py  vuln-research-mcp_doc_20260702.md
.github/workflows/: publish.yml  test.yml
data/: cwe_full.json  exploitdb_index.json
data/pipelines/: full_recon.yaml  tech_stack_audit.yaml  vuln_deep_dive.yaml
docs/: BEGINNER.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md  advanced-usage.md  configuration.md  installation.md  integrations.md
scripts/: setup_linux.sh  setup_macos.sh  setup_windows.bat
src/: __init__.py  cli_wizard.py  rate_limiter.py  server.py
src/bus/: __init__.py  event_bus.py
src/compliance/: __init__.py  baseline_checker.py  fix_verifier.py
src/core/: __init__.py  async_subprocess.py  cache_manager.py  circuit_breaker.py  config_manager.py  distributed.py  health_check.py  knowledge_graph.py  session_state.py  structured_logger.py  tool_namespace.py  tool_registry.py
src/correlator/: __init__.py  engine.py  fingerprint_loader.py  fingerprints.json
src/db/: __init__.py  database.py  models.py
src/gateway/: __init__.py  cli.py  rest_api.py
src/graph/: __init__.py  neo4j_adapter.py
src/intel/: __init__.py  attck.py  cnvd.py  offline_mirror.py
src/models/: __init__.py  vulnerability.py
src/orchestrator/: __init__.py  pipeline.py  scheduler.py
src/platform/: __init__.py  tool_manager.py
src/plugins/: __init__.py  sdk.py
src/reporting/: __init__.py  pentest_report.py
src/security/: __init__.py  alerting.py  api_auth.py  approval.py  audit.py  data_sanitizer.py  db_crypto.py  enhanced_sanitizer.py  input_sanitizer.py  intranet_guard.py  key_manager.py  privilege_enforcer.py  rbac.py  target_authorization.py  target_policy.py  tool_guard.py
src/tools/: __init__.py  cpe_tool.py  cross_search_tool.py  cve_tools.py  cvss_tool.py  cwe_tool.py  exploit_tool.py  graph_tool.py  network_tools.py  nuclei_tool.py  poc_archive_tool.py  report_tool.py  scan_tools.py  scanner_tools.py  threat_intel_tool.py
src/validators/: __init__.py
src/watchdog/: __init__.py  watcher.py
src/webui/: __init__.py  api_server.py  app.py
src/webui/static/: style.css
src/webui/templates/: base.html  cve.html  dashboard.html  report.html  scan.html  settings.html  tools.html
src/workflow/: __init__.py  engine.py  export.py  presets.py
tests/: test_attck.py  test_correlator.py  test_database.py  test_event_bus.py  test_pipeline.py  test_report.py  test_scanner_tools.py  test_scheduler.py  test_security_audit.py  test_security_input_sanitizer.py  test_security_target_policy.py  test_security_tool_guard.py  test_server.py
