[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-research-mcp"
version = "0.1.1"
description = "Vulnerability Research MCP Server for Penetration Testers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Penetration Testing Expert Agent"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    # "License :: OSI Approved :: MIT License",  # Deprecated: use license = "MIT" above
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "build",
    "twine"
]

[project.scripts]
vuln-research-mcp = "src.server:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
