[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-research-mcp"
version = "2.0.0"
description = "Vulnerability Research MCP Server - Security Intelligence Workstation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Penetration Testing Expert Agent"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "dnspython>=2.4.0",
    "diskcache>=5.6.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "build",
    "twine"
]

[project.scripts]
vuln-research-mcp = "src.server:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
