[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-research-mcp"
version = "4.1.0"
description = "Vulnerability Research MCP Server v4.1 - Penetration Testing Infrastructure Component (Security Hardened)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "99-sketch", email = "team@99-sketch.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0,<2.0",
    "httpx>=0.27.0,<1.0",
    "dnspython>=2.4.0,<3.0",
    "diskcache>=5.6.0,<6.0",
    "PyYAML>=6.0,<7.0",
    "networkx>=3.0,<4.0",
    "rich>=13.0,<14.0",
    "fastapi>=0.100.0,<1.0",
    "uvicorn>=0.23.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
    "build",
    "twine"
]

[project.scripts]
vuln-research-mcp = "src.server:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
